<resources>
    <string name="app_name">praca_inz</string>
    <string name="pp_logo">pp_logo</string>
    <string name="text_go_to_menu">Muzeum \nSztuk \nUżytkowych</string>
    <string name="about_desc">Muzeum gromadzi obiekty sztuki użytkowej powstałe od średniowiecza do współczesności. To z kunsztem wykonane przedmioty, jednocześnie świadkowie zmieniających się gustów, mód i stylów. Eksponowanymi przedmiotami opowiadamy wielowątkową historię o czasach, w których je wykonano i ludziach, którym służyły. Oddano im głos, bo mówiąc o człowieku dawnych epok,  jego potrzebach, zainteresowaniach, pragnieniach, mówią również wiele o tym, kim my  jesteśmy dzisiaj.Wychodząc niekiedy poza zwyczajowy pokaz muzealny wystawa działa na różne zmysły oraz zachęca do poznania aktywnego. Realizowany w ramach wielu cykli tematycznych bogaty program wydarzeń, prezentuje muzealną kolekcję szerzej, wzbogacając  narrację wystawy stałej, ale także wychodząc poza  nią.</string>
    <string name="castle_image">castle image</string>
    <string name="go_to_menu_btn">go to menu btn</string>
    <string name="logo_of_second_menu">Logo of second menu</string>
    <string name="o_muzeum">\nO muzeum</string>
    <string name="przewodnik">\nPrzewodnik</string>
    <string name="ekspozycja">\nEkspozycja</string>
    <string name="ekspozycje">\nEkspozycje</string>
    <string name="strona_ninternetowa">Strona \ninternetowa</string>
    <string name="kim_jestesmy">Kim jesteśmy</string>
    <string name="jeste_my_jedynym_muzeum_sztuki_uzytkowej_w_polsce">Jesteśmy jedynym muzeum sztuki użytkowej w Polsce.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="furniture_desc">Zbiory mebli składają się z około 1400 obiektów i obejmują przedmioty powstałe od średniowiecza do współczesności. W ogromnej większości są to sprzęty europejskie.Mamy pojedyncze meble reprezentujące najważniejsze ośrodki i środowiska meblarskie nowożytności, w tym obiekty meblarstwa włoskiego epoki renesansu, pojedyncze meble francuskie i włoskie XVIII w. oraz z Półwyspu Iberyjskiego.</string>
    <string name="ceramics_desc">Zbiór ceramiki obejmuje wszystkie gatunki dziedziny i liczy ok. 3.500 eksponatów. Obiekty pochodzą głównie z wytwórni europejskich, mniej liczne są wyroby daleko- i bliskowschodnie.W czesną realizacją jest zespół francuskich płytek posadzkowych z XIII w. W niewielkiej kolekcji kafli piecowych i flizów obiektem szczególnym jest kafel z przedstawieniem Samsona walczącego z lwem z początku XVI w., oraz zespół płytek holenderskich z ok. 1700 r.</string>
    <string name="exhibExampleDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean blandit metus sit amet tellus molestie, et venenatis nunc tempor. Aliquam hendrerit dapibus risus ac rhoncus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce dictum egestas sem. Etiam faucibus lorem et sapien feugiat rhoncus. In vitae ante imperdiet, porttitor nisi sit amet, imperdiet lacus. Nunc semper orci nec dapibus molestie. Nam tristique odio a congue dictum. Nunc gravida ultrices ipsum nec sodales. Fusce vitae luctus tellus.</string>
    <string name="metals_desc">Dział Złotnictwa, Biżuterii i Wyrobów z Metali Nieszlachetnych gromadzi wyroby złotnicze, jubilerskie, konwisarskie (wykonane z cyny), zegarmistrzowskie, ludwisarskie (odlane z miedzi, mosiądzu, spiżu lub brązu), rusznikarskie (broń palna) i płatnerskie (zbroje i broń biała) oraz kowalskie, czyli wszystko, co wykonano z metali i ich stopów, także połączonych z kolorowymi kamieniami, emaliami, drewnem, kością słoniową, muszlą czy szkłem.</string>
    <string name="fabrics_desc">Na kolekcję Działu Tkanin składają się tkaniny dekoracyjne, ubiory, akcesoria mody, paramenty liturgiczne, tkaniny odzieżowe i obiciowe oraz zbiór współczesnej tkaniny unikatowej. Do najcenniejszych należą gobeliny zachodnioeuropejskie z okresu od XVI do XVIII wieku, zwłaszcza z manufaktur flamandzkich i brukselskich, m.in. z warsztatu rodziny Leyniers.</string>

    <string name="o_nas">O nas</string>
    <string name="jesteśmy_studentami">Jesteśmy studentami kierunku Elektronika i Telekomunikacja na wydziale Informatyki i Telekomunikacji Politechniki Poznańskiej.\n\n
        Projekt stworzony został jako praca inżynierska, której celem było opracowanie aplikacji mobilnej „Inteligentne oprowadzanie po muzeum”.\n\n
        Głównym zadaniem systemu inteligentnego oprowadzania jest umożliwienie interakcji użytkownika z aplikacją mobilną i estymacja jego położenia w pomieszczeniu, na podstawie której na ekranie telefonu zwiedzającego będą wyzwalały się odpowiednie treści odnoszące się do eksponatów znajdujących się w jego pobliżu.
           \n \n \n
       <b> Źródła do zastosowanych obrazów i treści w aplikacji:</b>
        \n
       <b>book_icon.png: </b>
        \n
https://www.flaticon.com/free-icon/book_864685
        \n
        <b>exhibition_icon.png: </b>
        \n
https://www.flaticon.com/free-icon/exhibition_782001
        \n
        <b>exposition.png:</b> \n
https://www.flaticon.com/free-icon/painting-exhibit-in-fine-art-museum_28579 \n
        <b>Info_icon.png:</b> \n
https://www.flaticon.com/free-icon/info_151776 \n
        <b>Information_icon.png:</b> \n
https://www.flaticon.com/free-icon/information_545674 \n
        <b>Location_icon.png:</b> \n
https://www.flaticon.com/free-icon/museum_2714709 \n
        <b>second_logo.png:</b> \n
https://msu.mnp.art.pl/fotki/files/files/www/wieza/Werner.jpg \n
        <b>logo_pp.png:</b> \n
        https://upload.wikimedia.org/wikipedia/commons/1/11/Logo_PP.png \n
        <b>exhibit_first_edit.png:</b> \n
https://www.flaticon.com/free-icon/painting_3791121 \n
        <b>podejdz_image_info.png:</b> \n
        https://www.flaticon.com/free-icon/exhibition_1577707 \n
        <b>website_icon.png:</b> \n
https://www.flaticon.com/free-icon/museum_2714721 \n
        <b>Logout.png:</b> \n
https://www.flaticon.com/free-icon/logout_992680 \n
        <b>About.png:</b> \n
https://www.flaticon.com/free-icon/about-us_15659 \n
        <b>Others.png:</b> \n
https://www.flaticon.com/free-icon/clipboards_616948 \n

        \n \n
<b>Treści dotyczące eksponatów wraz ze zdjęciami oraz opis muzeum: </b> \n
https://msu.mnp.art.pl/
\n
<b>Puchar.png: </b> \n
https://www.flaticon.com/free-icon/exhibition_1577630 \n
<b>Zakładka.png: </b> \n
https://pixabay.com/pl/illustrations/wst%C4%85%C5%BCka-zak%C5%82adka-edukacja-szko%C5%82y-1202757/ \n
<b>exhibit_second_edit.png: </b> \n
https://www.flaticon.com/free-icon/exhibit_2714846 \n
<b>click_image_info.png: </b> \n
https://www.flaticon.com/free-icon/tap_4001152
        \n \n
<i>Podczas tworzenia aplikacji, korzystano z developer.android.com, stackoverflow.com, oraz innych poradników (również video) zamieszczonych w internecie. </i>

    </string>
    <string name="jak_dziala">Jak działa?</string>
    <string name="Wykorzystanie_czujnikow">Wykorzystanie czujników Estimote Proximity Beacon oraz punktu dostępowego WiFi umożliwia wyznaczanie położenia użytkownika, dzięki temu na ekranie telefonu eksponat w jego najbliższym otoczeniu zostaje podświetlony.</string>
    <string name="funkcje">Funkcje w zakładce Przewodnik:</string>
    <string name="podejcie">- podejście do eksponatu spowoduje jego podświetlenie</string>
    <string name="klikniecie">- kliknij na dany eksponat na mapce, aby dowiedzieć się więcej</string>
    <string name="znajdz_mnie">- naciśnij przycisk „Znajdź mnie”, aby wyświetlić swoją lokalizację na mapie sali muzealnej</string>
    <string name="wyraz_opinie">- możesz ocenić eksponat, a także napisać swoją opinię sięgając do zakładki Opinie</string>
    <string name="kim_jestesmy2">Kim jesteśmy</string>
    <string name="thumbnail_of_exhibit">Thumbnail of exhibit</string>
    <string name="exhibit_name">Exhibit Name</string>
    <string name="opis_wazy">Waza dekoracyjna z miniaturami w owalnych medalionach: Zamek królewski od strony Wisły oraz bukiet kwiatowy Manufaktura Porcelany, Baranówka, Polska, lata 1829 – 1839 porcelana wielobarwnie malowana, złocona</string>
    <string name="opis_waza">Waza dekoracyjna z miniaturami w owalnych medalionach: Zamek królewski od strony Wisły oraz bukiet kwiatowy Manufaktura Porcelany, Baranówka, Polska, lata 1829 – 1839 porcelana wielobarwnie malowana, złocona</string>
    <string name="miniatura_opis">Dezydery Chłapowski, Kompozycja patriotyczna z portretem Tadeusza Kościuszki, po 1830 r.</string>
    <string name="puchar_opis">Puchar dwoisty, neogotycki, według rysunku A. Dürera z 1526; A. Schleißner, Hanau (Hesja), po 1882</string>

    <string name="pictures_sources">
    </string>

    <string-array name="exhibitions">
        <item>Item1</item>
        <item>Item2</item>
        <item>Item4</item>
        <item>Item5</item>
    </string-array>

    <string-array name="description">
        <item>random desc</item>
        <item>random desc</item>
        <item>random desc</item>
        <item>random desc</item>
        <item>random desc</item>
    </string-array>
</resources>