<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@drawable/gradient_background"
    tools:context=".MainMenuActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="3"
        android:layout_marginTop="-10dp"
        android:layout_height="0dp" >

        <ImageView
            android:id="@+id/secondLogoMenuImageViewId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/logo_of_second_menu"
            app:srcCompat="@drawable/second_menu_logo" />
    </RelativeLayout>

    <GridLayout
        android:layout_weight="7"
        android:columnCount="2"
        android:rowCount="2"
        android:alignmentMode="alignMargins"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        android:layout_margin="10dp"
        >
        <!-- First (0|0) square of GridLayout -->
        <androidx.cardview.widget.CardView
            android:onClick="goToAboutMethod"
            android:layout_width="wrap_content"
            android:clickable="true"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_gravity="center_vertical|center_horizontal" >

                <ImageView
                    android:id="@+id/aboutUsImageIconImageViewId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:background="#000000"
                    app:srcCompat="@drawable/book_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/o_muzeum"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
            </androidx.cardview.widget.CardView>

        <!-- Second (0|1) square of GridLayout -->
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goToLocalizationMethod"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_gravity="center_vertical|center_horizontal" >

                <ImageView
                    android:id="@+id/localizationImageIconImageViewId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    app:srcCompat="@drawable/location_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/przewodnik"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Third (1|0) square of GridLayout -->
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:onClick="go_to_exhibition_method"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_gravity="center_vertical|center_horizontal" >

                <ImageView
                    android:id="@+id/exhibitionImageIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    app:srcCompat="@drawable/exhibition_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/ekspozycja"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Fourth (1|1) square of GridLayout -->
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:onClick="goToTheWebsiteMethod"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_gravity="center_vertical|center_horizontal" >

                <ImageView
                    android:id="@+id/websiteImageIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    app:srcCompat="@drawable/website_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/strona_ninternetowa"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>

</androidx.appcompat.widget.LinearLayoutCompat>